--- a/index.html
+++ b/index.html
@@ -106,6 +106,42 @@
     <button>Download for Mac</button>
   </form>
 </div>
+<footer>
+  <div class="footer">
+    <div class="footerimage">
+      <img src="https://clip-board-landing-page-master.vercel.app/images/logo.svg" class="footerlogo">
+    </div>
+    <div class="footerlists">
+      <div class="contacts">
+        <ul>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Press Kit</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Install Guide</a></li>
+        </ul>
+      </div>
+      <div class="iconslist">
+        <ul class="icons">
+          <li class="icons1">
+            <img src="https://clip-board-landing-page-master.vercel.app/images/icon-facebook.svg" alt="">
+          </li>
+          <li class="icons2">
+            <img src="https://clip-board-landing-page-master.vercel.app/images/icon-twitter.svg" alt="">
+          </li>
+          <li class="icons3">
+            <img src="https://clip-board-landing-page-master.vercel.app/images/icon-instagram.svg" alt="icon-instagram">
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div> 
+
+</footer>
 
 
 
